tests/union_circular_imports/union_circular_imports.exp
Error ------------------------------------------------------------------------------------------------------ two.js:4:16

Cannot assign `false` to `x` because: [incompatible-type]
 - Either boolean [1] is incompatible with string [2].
 - Or boolean [1] is incompatible with number [3].

   two.js:4:16
   4| const x: Two = false;
                     ^^^^^ [1]

References:
   two.js:3:19
   3| export type Two = string | One;
                        ^^^^^^ [2]
   two.js:3:28
   3| export type Two = string | One;
                                 ^^^ [3]



Found 1 error
